--- a/projects/index.html
+++ b/projects/index.html
@@ -158,7 +158,7 @@
             <p class="card-text">Image segmentation using CycleGAN </p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data </a>
               <a class="badge green waves-effect font-weight-light mr-1" href="/assets/pdf/Projects-Reports/CycleGAN-Report.pdf" target="_blank">Report</a>
               <a class="badge red waves-effect font-weight-light mr-1" href="https://youtu.be/wXQPglO9ZTo" target="_blank">Video</a>
 
@@ -178,9 +178,8 @@
             <h5 class="card-title">Multi-Scale image segmentation</h5>
             <p class="card-text">Image segmentation using hierarchical mutli-scale attention model.</p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="link here" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="link here" target="_blank">Data</a>
-              <a class="badge green waves-effect font-weight-light mr-1" href="link here" target="_blank">Report</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/Final%20Project" target="_blank">Code</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data</a>
             </div>
           </div>
         </div>
@@ -216,9 +215,8 @@
             <h5 class="card-title">Pose Estimator<p> </p></h5>
             <p class="card-text">.</p>
             <div class="row ml-1 mr-1 p-0">
-              <a class="badge grey waves-effect font-weight-light mr-1" href="github link here" target="_blank">Code</a>
-              <a class="badge blue waves-effect font-weight-light mr-1" href="github link here" target="_blank">Data </a>
-              <a class="badge green waves-effect font-weight-light mr-1" href="link here" target="_blank">Report</a>
+              <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/CA2" target="_blank">Code</a>
+              <a class="badge blue waves-effect font-weight-light mr-1" href="https://paperswithcode.com/dataset/lsp" target="_blank">Data </a>
               
             </div>
           </div>
