--- a/projects/index.html
+++ b/projects/index.html
@@ -109,8 +109,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/Arkit.gif" alt="project thumbnail" height="250px"  />
           <div class="card-body">
-            <h5 class="card-title">Accuracy/Precision measurment pip-line</h5>
-            <p class="card-text">Measuring the accuracy and precision of Iphone 3D sensors.
+            <h5 class="card-title">Accuracy/Precision measurment pipeline</h5>
+            <p class="card-text">Measurement of Iphone 3D sensor's accuracy and precision.
 </p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="" target="_blank">Coming Soon</a>
@@ -134,7 +134,7 @@
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" height="250px" alt="project thumbnail" />
           <div class="card-body">
             <h5 class="card-title">CitiBike<p><br /></p></h5>
-            <p class="card-text".>Analysing the trend and usage of citibikes in New York City.</p>
+            <p class="card-text".>Analysing the trend and usage of citi bike in New York City. <p><br /></p></p>
             <div class="row ml-1 mr-1 p-0">
               <!-- Change the repo when the new code has been done -->
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/SajjadPSavoji/CitiBikeNYC" target="_blank">Code</a>
