--- a/projects/index.html
+++ b/projects/index.html
@@ -155,7 +155,7 @@
           <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" height="250px"/>
           <div class="card-body">
             <h5 class="card-title">Cycle GAN<p><br /></p></h5>
-            <p class="card-text">Image segmentation using CycleGAN </p>
+            <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN. </p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://www.cityscapes-dataset.com/" target="_blank">Data </a>
