--- a/projects/index.html
+++ b/projects/index.html
@@ -154,7 +154,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CycleGan2.JPG" alt="project thumbnail" height="250px"/>
           <div class="card-body">
-            <h5 class="card-title">Cycle GAN<p><br /></p></h5>
+            <h5 class="card-title">Unpaired Image-to-Image Translation</h5>
             <p class="card-text">Image segmentation over cityscape dataset using Cycle-GAN. </p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/CycleGan" target="_blank">Code</a>
