--- a/projects/index.html
+++ b/projects/index.html
@@ -133,8 +133,8 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" height="250px" alt="project thumbnail" />
           <div class="card-body">
-            <h5 class="card-title">CitiBike<p><br /></p></h5>
-            <p class="card-text".>Analysing the trend and usage of citi bike in New York City.</p>
+            <h5 class="card-title">Citi Bike Analysis<p><br /></p></h5>
+            <p class="card-text".>Extracting and Transforming Citi Bike Data for Analysing the trends and usages.</p>
             <div class="row ml-1 mr-1 p-0">
               <!-- Change the repo when the new code has been done -->
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/SajjadPSavoji/CitiBikeNYC" target="_blank">Code</a>
