--- a/projects/index.html
+++ b/projects/index.html
@@ -133,7 +133,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/CitiBikeLogo.png" height="220px" alt="project thumbnail" />
           <div class="card-body">
-            <h5 class="card-title">Citi Bike Analysis<p><br /></p></h5>
+            <h5 class="card-title">Citi Bike Analysis for NYC</h5>
             <p class="card-text".>Extracting and Transforming Citi Bike Data for Analysing the trends and usages.</p>
             <div class="row ml-1 mr-1 p-0">
               <!-- Change the repo when the new code has been done -->
