--- a/projects/index.html
+++ b/projects/index.html
@@ -95,7 +95,7 @@
   <!-- Content -->
   <div class="content">
     
-  <h1>Projects (This Page is still under construction)</h1>
+  <h1>Projects</h1>
   <!--
   <h6>some of the projects I have worked on</h6>
   -->
@@ -212,7 +212,7 @@
         <div class="card">
           <img class="card-img-top" src="/assets/img/pose.jpg" alt="project thumbnail" height="250px"/>
           <div class="card-body">
-            <h5 class="card-title">Human joint Pose Estimator<p><br /></p></h5>
+            <h5 class="card-title">Human joint Pose Estimator</h5>
             <p class="card-text">.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/CA2" target="_blank">Code</a>
