--- a/index.html
+++ b/index.html
@@ -156,6 +156,18 @@
     <div class="row p-0">
       <div class="col-sm-2 p-0">
         <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
+          Jan 9, 2023
+        </span>
+      </div>
+      <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
+        <p>I started my role as a R&D intern at <a href="https://toronto.ubisoft.com/" target="_blank">Ubisoft Toronto</a>.
+</p>
+      </div>
+    </div>
+
+    <div class="row p-0">
+      <div class="col-sm-2 p-0">
+        <span class="badge light-green darken-1 font-weight-bold text-uppercase align-middle date ml-3">
           Sep 14, 2021
         </span>
       </div>
