--- a/projects/index.html
+++ b/projects/index.html
@@ -213,7 +213,7 @@
           <img class="card-img-top" src="/assets/img/pose.jpg" alt="project thumbnail" height="250px"/>
           <div class="card-body">
             <h5 class="card-title">Human joint Pose Estimator</h5>
-            <p class="card-text">.</p>
+            <p class="card-text">Detecting location of human joints from the LSP dataset.</p>
             <div class="row ml-1 mr-1 p-0">
               <a class="badge grey waves-effect font-weight-light mr-1" href="https://github.com/aminfadaei116/Deep-Learning-Course/tree/master/CA2" target="_blank">Code</a>
               <a class="badge blue waves-effect font-weight-light mr-1" href="https://paperswithcode.com/dataset/lsp" target="_blank">Data </a>
