--- a/teaching/index.html
+++ b/teaching/index.html
@@ -98,7 +98,7 @@
   
 
 
-<h3 class="mt-4"><em>York University</h3>
+<h3 class="mt-4"><em>York University<span class="sr-only">(current)</span></h3>
 
 <div class="card mt-3">
   <div class="p-3">
