--- a/teaching/index.html
+++ b/teaching/index.html
@@ -99,7 +99,7 @@
 
 
 <h3 class="mt-4"><em>York University<span class="sr-only">(current)</span></h3>
-nobr><em>Amin Fadaeinejad,</nobr>
+<nobr><em>Amin Fadaeinejad,</nobr>
 <div class="card mt-3">
   <div class="p-3">
     <div class="row">
