--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
 
         <p>
-            I am a Research Assistant at <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a> in Toronto, Canada, working on Deep Learning models with applications in Computer Vision.
+            I'm a Researcher specializing in using Deep Learning models for Computer vision applications. I am currently a member of <a href="https://www.biomotionlab.ca/" target="_blank">BioMotion Lab</a>, and a R&D intern at <a href="https://toronto.ubisoft.com/" target="_blank">Ubisoft Toronto</a>.
         </p>
         
         <p>
