--- a/teaching/index.html
+++ b/teaching/index.html
@@ -99,7 +99,6 @@
 
 
 <h3 class="mt-4"><nobr><em>York University</nobr></h3>
-<nobr><em>Amin Fadaeinejad,</nobr>
 <div class="card mt-3">
   <div class="p-3">
     <div class="row">
@@ -166,7 +165,7 @@
   </div>
 </div>
 
-<h3 class="mt-4">University of Tehran</h3>
+<h3 class="mt-4"><nobr><em>University of Tehran</nobr></h3>
 <div class="card mt-3">
   <div class="p-3">
     <div class="row">
@@ -287,7 +286,7 @@
 </div>
 
 
-<h3 class="mt-4">Rezvan 110 (Non Profit Organization)</h3>
+<h3 class="mt-4"><nobr><em>Rezvan 110 (Non Profit Organization)</nobr></h3>
 <div class="card mt-3">
   <div class="p-3">
     <div class="row">
@@ -301,10 +300,10 @@
 
   </div>
 
-  <!-- Footer
+  Footer
   <footer>
-    &copy; Copyright 2021 Otilia Stretcu.
-     -->
+    &copy; Copyright 2023 Amin Fadaeinejad.
+     
     
   </footer>
 
