--- a/projects/index.html
+++ b/projects/index.html
@@ -279,10 +279,10 @@
 
   </div>
 
-  <!-- Footer 
+
   <footer>
-    &copy; Copyright 2021 Otilia Stretcu.
-    -->
+    &copy; Copyright 2023 Amin Fadaeinejad.
+  
     
   </footer>
 
