--- a/publications/index.html
+++ b/publications/index.html
@@ -296,11 +296,9 @@
 
   </div>
 
-  <!-- Footer 
+   
   <footer>
-    &copy; Copyright 2021 Otilia Stretcu.
-    -->
-    
+    &copy; Copyright 2023 Amin Fadaeinejad.  
   </footer>
 
   <!-- Core JavaScript Files -->
