--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </span>
       </div>
       <div class="col-sm-10 mt-2 mt-sm-0 ml-3 ml-md-0 p-0 font-weight-light text">
-        <p>I started a new role as a R&D intern at <a href="https://toronto.ubisoft.com/" target="_blank">Ubisoft Toronto</a>.
+        <p>I started a new role as an R&D intern at <a href="https://toronto.ubisoft.com/" target="_blank">Ubisoft Toronto</a>.
 </p>
       </div>
     </div>
