--- a/cv/index.html
+++ b/cv/index.html
@@ -1259,13 +1259,13 @@ This part is for the certificates
 
   </div>
 
-  <!-- Footer 
+
   <footer>
-    &copy; Copyright 2021 Otilia Stretcu.
+    &copy; Copyright 2023 Amin Fadaeinejad.
     
     
   </footer>
-  -->
+ 
 
   <!-- Core JavaScript Files -->
   <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
