--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         
         <p>
             Currently I am enrolled as a Master's student in the <a href="https://lassonde.yorku.ca/eecs/" target="_blank">Electrical Engineering & Computer Science Department</a> at <a href="https://www.yorku.ca/" target="_blank">York University</a>, supervised by <a href="https://www.biomotionlab.ca/" target="_blank">Prof. Nikolaus Troje</a> and co-supervised by <a href="https://mbrubake.github.io/" target="_blank">Marcus A. Brubaker</a>.
-            My Master's research focuses on using generative models for creating synthatic images. developing Deep Learning models to generate novel face images from different views. My research also consists of Computer Vision/Graphic applications in Deep Learning. Previously I have done model/color recognition in my undergrad as my thesis project.
+            My Master's research focuses on using generative models for creating synthatic face images.
         </p>
 
 
