--- a/projects/Deep-Learning-Course/Pose-Estimation/index.html
+++ b/projects/Deep-Learning-Course/Pose-Estimation/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Amin Fadaeinejad | Anomaly Detection using Auto encoder</title>
+  <title>Amin Fadaeinejad | Human joint Pose Estimator</title>
   <meta name="description" content="This is the personal website of Otilia Stretcu">
 
   <!-- Fonts and Icons -->
@@ -95,7 +95,7 @@ table, th, td {
   <!-- Content -->
   <div class="content">
     
-  <h1>Anomaly Detection</h1>
+  <h1>Human joint Pose Estimator</h1>
  
 
 
