--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Amin Fadaeinejad | Anomaly Detection using Auto encoder</title>
+  <title>Amin Fadaeinejad | Unpaired Image-to-Image Translation</title>
   <meta name="description" content="This is the personal website of Otilia Stretcu">
 
   <!-- Fonts and Icons -->
@@ -95,7 +95,7 @@ table, th, td {
   <!-- Content -->
   <div class="content">
     
-  <h1>Anomaly Detection</h1>
+  <h1>Unpaired Image-to-Image Translation (CycleGAN)</h1>
  
 
 
