--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -95,8 +95,13 @@ table, th, td {
   <!-- Content -->
   <div class="content">
     
-  <h1>Unpaired Image-to-Image Translation (CycleGAN)</h1>
- 
+  <h1>Image-to-Image Translation (CycleGAN)</h1>
+  <h4>Abstract</h4>
+<p>
+  
+
+
+</p>
 
 
 
