--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -99,7 +99,7 @@ table, th, td {
   <h4>Abstract</h4>
 <p>
   
-
+Image-to-image translation is one of the tasks in deep learning that has gotten a lot of attention in the deep learning and computer vision community. However, in the more traditional approaches, there must be labelled images for corresponding images, e.g. for every image from domain  <span class="emphasized">A</span> there must be an image  <span class="emphasized">B</span> in the other domain. However, in the approach that <a href="https://arxiv.org/pdf/1703.10593.pdf">Jun-Yan Zhu et el</a>, they did not need the corresponding images from the two domains.
 
 </p>
 
