--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -104,22 +104,18 @@ Image-to-image translation is one of the tasks in deep learning that has gotten 
 </p>
 
 
+<h2 id="overview">1. Introduction</h2>
 
-<p> In data science, anomaly detection is when the system tries to detect a rare item, event or observation which deviates significantly from the original distribution and can not be defined as normal behaviour. Three different categories of anomaly detection exist:</p>
-
-<ul>
-  <li>Supervised anomaly detection</li>
-  <li>Semi-supervised anomaly detection</li>
-  <li>Unsupervised anomaly detection</li>
-</ul>
-
-<p> In this project, we will be using an unsupervised approach to detect the regions of the hazelnut images that do not match the distribution.</p>
-
-<h2 id="overview">1. Background</h2>
-
-<h4 id="overview">1.1  Anomaly Detection</h4>
+<h4 id="overview">1.1  Paired Data</h4>
 
 <p>Anomaly detection, also known as out-layer analysis, is a step-in data mining that identifies data points, events, and observations that deviate from a data set’s normal behaviour. It is the process of finding patterns in data that do not conform to prior expected behaviour. Anomaly detection is being employed increasingly in the presence of big data that is captured by sensors, social media platforms, huge networks, etc. They also have many applications, including energy systems, medical devices, banking network intrusion detection, etc. Machine learning is progressively being used to automate anomaly detection.</p>
+
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Pair2.PNG" width="65%" height="auto"  id="figure1" />
+    <div class="caption" >Figure 1</div>
+</div>
+
 
 
 <h4 id="overview"> 1.2. Auto-Encoders</h4>
