--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -119,7 +119,7 @@ Image-to-image translation is one of the tasks in deep learning that has gotten 
 
 
 <h4 id="overview">1.3 Cycle Consistency</h4>
-
+hello <div class="cmath"> Accuracy` = (TP + TN)/(TP + FP + FN + TN)`</div>
 
 
 <h4 id="overview">1.4 Identity loss</h4>
