--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -121,7 +121,7 @@ Image-to-image translation is one of the tasks in deep learning that has gotten 
 <h4 id="overview">1.3 Cycle Consistency</h4>
 hello <div class="cmath"> Accuracy` = (TP + TN)/(TP + FP + FN + TN)`</div>
 
-Adversarial training can, in theory, learn mappings `G` and $F$ that produce outputs identically distributed as target domains $Y$ and $X$, respectively. However, with a large enough capacity, a network can map the same set of input images to any random permutation of images in the target domain, where any of the learned mappings can induce an output distribution that matches the target distribution. Thus, adversarial losses alone cannot guarantee that the learned function can map an individual input $x_i$ to a desired output $y_i$. To further reduce the space of possible mapping functions, we argue that the learned mapping functions should be cycle-consistent.
+Adversarial training can, in theory, learn mappings `G` and $F$ that produce outputs identically distributed as target domains $Y$ and $X$, respectively. However, with a large enough capacity, a network can map the same set of input images to any random permutation of images in the target domain, where any of the learned mappings can induce an output distribution that matches the target distribution. Thus, adversarial losses alone cannot guarantee that the learned function can map an individual input `x_i` to a desired output $y_i$. To further reduce the space of possible mapping functions, we argue that the learned mapping functions should be cycle-consistent.
 
 
 <h4 id="overview">1.4 Identity loss</h4>
