--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -116,17 +116,29 @@ Image-to-image translation is one of the tasks in deep learning that has gotten 
     <div class="caption" >Figure 1</div>
 </div>
 
+<h4 id="overview">1.2  Adversarial training</h4>
+
+<p>
+  <a href="#figure2">Figure 2(a)</a> shows the entire model, where we indicate that domain `X` is the real image and domain `Y` is the segmentation domain. Model `G` is a generator that converts images from domain `X` to domain `Y`, in other words, `G:X\rightarrow Y`. Model `F` is a generator that converts images from domain `Y` to domain `X`, in other words, `F:Y\rightarrow X`. There are also two discriminators whose objective is to detect whether the input image is real or fake. Discriminators `D_{X}`will detect whether the ground image (the real image from the scene) is real. Discriminators $D_{Y}$ will detect whether the segmentation is real.
+</p>
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Cycle.JPG" width="65%" height="auto"  id="figure2" />
+    <div class="caption" >Figure 2</div>
+</div>
 
 
 <h4 id="overview">1.3 Cycle Consistency</h4>
 
-Adversarial training can, in theory, learn mappings `G` and `F` that produce outputs identically distributed as target domains `Y` and `X,` respectively. However, with a large enough capacity, a network can map the same input images to any random permutation of images in the target domain, where any of the learned mappings can induce an output distribution that matches the target distribution. Thus, adversarial losses alone cannot guarantee that the learned function can map an individual input `x_i` to a desired output `y_i.` The learned mapping functions should be cycle-consistent to reduce the space of possible mapping functions. Figure 4 shows the concept of cycle consistency. In this (cycle consistency) approach, after applying generator 𝐺 to an image, we will also apply the function 𝐹, which is going to convert 𝐺 ( 𝑋 ) back to domain 𝑌. The overall goal is to make 𝑋 and 𝐹 ( 𝐺 ( 𝑋)) as close as possible. We also do the same thing reversely, where the goal is to make 𝑌 and 𝐺 ( 𝐹 ( 𝑌)) as close as possible.
+<p>
+  Adversarial training can, in theory, learn mappings `G` and `F` that produce outputs identically distributed as target domains `Y` and `X,` respectively. However, with a large enough capacity, a network can map the same input images to any random permutation of images in the target domain, where any of the learned mappings can induce an output distribution that matches the target distribution. Thus, adversarial losses alone cannot guarantee that the learned function can map an individual input `x_i` to a desired output `y_i.` The learned mapping functions should be cycle-consistent to reduce the space of possible mapping functions. Figure ssssssssssssssssssss shows the concept of cycle consistency. In this (cycle consistency) approach, after applying generator 𝐺 to an image, we will also apply the function 𝐹, which will convert `G(X)` back to domain `Y`. The overall goal is to make `X` and `F(G(X))` as close as possible. We also do the same thing reversely, where the goal is to make `Y` and `G(F(Y))` as close as possible.
+</p>
 
 
 <h4 id="overview">1.4 Identity loss</h4>
 
 <p>
-Other than the two methods we just mentioned, they also used one additional loss to train their model. If we apply generator `G` to an image that is in domain `X,` we expect it to stay in the same domain, which means `G(X)=X.` The opposite should also work, which means if we apply generator `F` to an image from domain `Y,` it should remain in domain `Y.` Figure 5 shows this concept.
+Besides the two methods we just mentioned, they also used one additional loss to train their model. If we apply generator `G` to an image that is in domain `X,` we expect it to stay in the same domain, which means `G(X)=X.` The opposite should also work, which means if we apply generator `F` to an image from domain `Y,` it should remain in domain `Y.` Figure 5 shows this concept.
 </p>
 
 <h4 id="overview">1.5 Total Objective</h4>
