--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -131,7 +131,7 @@ Image-to-image translation is one of the tasks in deep learning that has gotten 
 <h4 id="overview">1.3 Cycle Consistency</h4>
 
 <p>
-  Adversarial training can, in theory, learn mappings `G` and `F` that produce outputs identically distributed as target domains `Y` and `X,` respectively. However, with a large enough capacity, a network can map the same input images to any random permutation of images in the target domain, where any of the learned mappings can induce an output distribution that matches the target distribution. Thus, adversarial losses alone cannot guarantee that the learned function can map an individual input `x_i` to a desired output `y_i.` The learned mapping functions should be cycle-consistent to reduce the space of possible mapping functions. Figure ssssssssssssssssssss shows the concept of cycle consistency. In this (cycle consistency) approach, after applying generator `G` to an image, we will also apply the function `F`, which will convert `G(X)` back to domain `Y`. The overall goal is to make `X` and `F(G(X))` as close as possible. We also do the same thing reversely, where the goal is to make `Y` and `G(F(Y))` as close as possible.
+  Adversarial training can, in theory, learn mappings `G` and `F` that produce outputs identically distributed as target domains `Y` and `X,` respectively. However, with a large enough capacity, a network can map the same input images to any random permutation of images in the target domain, where any of the learned mappings can induce an output distribution that matches the target distribution. Thus, adversarial losses alone cannot guarantee that the learned function can map an individual input `x_i` to a desired output `y_i.` The learned mapping functions should be cycle-consistent to reduce the space of possible mapping functions. <a href="#figure2">Figure 2(a)</a> shows the concept of cycle consistency. In this (cycle consistency) approach, after applying generator `G` to an image, we will also apply the function `F`, which will convert `G(X)` back to domain `Y`. The overall goal is to make `X` and `F(G(X))` as close as possible. We also do the same thing reversely, where the goal is to make `Y` and `G(F(Y))` as close as possible.
 </p>
 
 
@@ -148,6 +148,15 @@ Besides the two methods we just mentioned, they also used one additional loss to
 <h2 id="overview">2.  Dataset</h2>
 
 <p>We used the <a href="https://www.cityscapes-dataset.com/">Cityscape</a> dataset, which contains images and their corresponding segmentation. <a href="#figure1">Figure 1</a> shows a sample of these images.</p>
+
+<h2 id="overview">3.  Network Architecture</h2>
+
+<p>
+  We used <a href="https://arxiv.org/abs/1603.08155">Johnson et al</a> model since Johnson et al were able to achieve impressive results for neural style transfer and super-resolution. The network contains three convolutions, several <a href="https://arxiv.org/abs/1512.03385">residual blocks</a>, two fractionally-strided convolutions with stride `1/2`, and one convolution that maps features to RGB. They use 6 blocks for 128 × 128 images and 9 blocks for 256×256 and higher-resolution training images. They also used <a href="https://arxiv.org/abs/1607.08022">instance normalization</a> in their model. For the discriminator networks, they used 70 × 70
+<a href="https://arxiv.org/abs/1611.07004v3">PatchGAN</a> which aims to classify whether
+70 × 70 overlapping image patches are real or fake.
+</p>
+
 
 <h4>2.1 Train Images</h4>
 
