--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -174,9 +174,24 @@ Gaussian distribution `N(0, 0.02)`.
 
 <h4>2.1 Discriminator loss</h4>
 
-<h4>2.2 Cycle C loss</h4>
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/DiscLoss.PNG" width="65%" height="auto"  id="figure4" />
+    <div class="caption" >Figure 4</div>
+</div>
 
-<h4>2.1 Discriminator loss</h4>
+<h4>2.2 Cycle Consistency loss</h4>
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/CycleLoss.PNG" width="65%" height="auto"  id="figure5" />
+    <div class="caption" >Figure 5</div>
+</div>
+
+<h4>2.3 Generator loss</h4>
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/GenLoss.PNG" width="65%" height="auto"  id="figure6" />
+    <div class="caption" >Figure 6</div>
+</div>
 
 For training, we have 390 fine images of hazelnuts. look at figure <a href="#figure3">3</a>.
 
