--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -201,6 +201,14 @@ Gaussian distribution `N(0, 0.02)`.
 
 <h2 id="more-information">6. Conclusion</h2>
 
+<p>
+  To sum up, the result we got from this project was not the exact same as the main paper itself. However, the results were quite acceptable. By looking at the generated images, we could see that the model's performance over generated ground images is quite well, but of course not as good as the main images. The results of the generated segmentation images were not as good as the ground images. One thing that we need to consider is that every colour in the segmentation image is going to represent a particular class. However, what the CycleGAN model sees is a normal image, and it will treat the image the same way, which is why the segmentation results are not categorized. Since the segmentation output is not categorized(the output was just an RGB image), we could not fully reconstruct that part. It is also interesting since in the paper in one figure (look at figure \ref{tosh}), the result they had when they used Cycle Alone is quite similar to the result that we have gotten in our implementation. However, their final result is better than ours.
+</p>
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/tosh.PNG" width="80%" height="auto"  id="figure9" />
+    <div class="caption" >Figure 9</div>
+</div>
 
 <h2 id="more-information">More infomation</h2>
 
