--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -197,7 +197,14 @@ Gaussian distribution `N(0, 0.02)`.
 
 
 
-<h2 id="more-information">5. Result</h2>
+<h2 id="more-information">5. Results</h2>
+
+We conducted two different experiments 1. We only used the cycle consistency loss 2. In addition to the cycle consistency loss, we used identity loss. In the second case, we assumed that `
+\lambda = \lambda`
+
+<h4>5.1 Cycle Consistency Loss Only</h4>
+
+<h4>5.2 Cycle Consistency Loss + Identity Loss</h4>
 
 <h2 id="more-information">6. Conclusion</h2>
 
