--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -213,6 +213,12 @@ We conducted two different experiments 1. We only used the cycle consistency los
 
 <h4>5.2 Cycle Consistency Loss + Identity Loss</h4>
 
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/GroundGood.PNG" width="75%" height="auto"  id="figure6" />
+    <img src="/assets/img/Seg1.PNG" width="75%" height="auto"  id="figure6" />
+    <div class="caption" >Figure 6</div>
+</div>
+
 <h2 id="more-information">6. Conclusion</h2>
 
 <p>
