--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -193,6 +193,17 @@ Gaussian distribution `N(0, 0.02)`.
     <div class="caption" >Figure 6</div>
 </div>
 
+<h4>4.4 Discriminator Accuracy</h4>
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Accuracy.png" width="80%" height="auto"  id="figure7" />
+    <div class="caption" >Figure 7</div>
+</div>
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Accuracy2.png" width="80%" height="auto"  id="figure8" />
+    <div class="caption" >Figure 8</div>
+</div>
 
 
 
@@ -203,6 +214,14 @@ We conducted two different experiments 1. We only used the cycle consistency los
 \lambda_{cycle} = \lambda_{identity}`
 
 <h4>5.1 Cycle Consistency Loss Only</h4>
+
+<p>
+  We trained our model for 200 epochs. Figure \ref{Acc} shows the accuracy of the discriminator, where it shows the percentage of correct guesses for the discriminator for detecting real ground images of fake ground images.
+Our results and output were quite reasonable; however, we could not train the entire model to its full potential due to our limited resources. The results were not bad. The performance for generating ground images was better. Figure \ref{Ground1} shows the result of our CycleGAN after 200 epochs of training without applying the identity loss.
+
+</p>
+
+
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/GroundGood1.PNG" width="75%" height="auto"  id="figure6" />
