--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -216,26 +216,24 @@ We conducted two different experiments 1. We only used the cycle consistency los
 <h4>5.1 Cycle Consistency Loss Only</h4>
 
 <p>
-  We trained our model for 200 epochs. Figure \ref{Acc} shows the accuracy of the discriminator, where it shows the percentage of correct guesses for the discriminator for detecting real ground images of fake ground images.
-Our results and output were quite reasonable; however, we could not train the entire model to its full potential due to our limited resources. The results were not bad. The performance for generating ground images was better. Figure \ref{Ground1} shows the result of our CycleGAN after 200 epochs of training without applying the identity loss.
+  We trained our model for 200 epochs. <a href="#figure7">Figure 7</a> shows the accuracy of the discriminator, where it shows the percentage of correct guesses for the discriminator for detecting real ground images of fake ground images.
+Our results and output were quite reasonable; however, we could not train the entire model to its full potential due to our limited resources. The results were not bad. The performance for generating ground images was better. <a href="#figure9">Figure 9</a> shows the result of our CycleGAN after 200 epochs of training without applying the identity loss.
 
 </p>
 
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/GroundGood1.PNG" width="75%" height="auto"  id="figure6" />
-    <img src="/assets/img/Seg2.PNG" width="75%" height="auto"  id="figure6" />
-    <div class="caption" >Figure 6</div>
+    <img src="/assets/img/GroundGood1.PNG" width="75%" height="auto"  id="figure9" />
+    <div class="caption" >Figure 9</div>
 </div>
 
 
 <h4>5.2 Cycle Consistency Loss + Identity Loss</h4>
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/GroundGood.PNG" width="75%" height="auto"  id="figure6" />
-    <img src="/assets/img/Seg1.PNG" width="75%" height="auto"  id="figure6" />
-    <div class="caption" >Figure 6</div>
+    <img src="/assets/img/GroundGood.PNG" width="75%" height="auto"  id="figure10" />
+    <div class="caption" >Figure 10</div>
 </div>
 
 <h2 id="more-information">6. Conclusion</h2>
