--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -195,6 +195,13 @@ Gaussian distribution `N(0, 0.02)`.
 
 <h4>4.4 Discriminator Accuracy</h4>
 
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/acc.JPG" width="80%" height="auto"  id="figure7" />
+    <div class="caption" >Figure 7</div>
+</div>
+
+
 <div style="align: left; text-align:center;">
     <img src="/assets/img/Accuracy.png" width="80%" height="auto"  id="figure7" />
     <div class="caption" >Figure 7</div>
