--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -195,6 +195,8 @@ Gaussian distribution `N(0, 0.02)`.
 
 <h4>4.4 Discriminator Accuracy</h4>
 
+We trained our model for 200 epochs. <a href="#figure7">Figure 7</a> shows the accuracy of the discriminator, where it shows the percentage of correct guesses for the discriminator for detecting real ground images or fake ground images.
+
 
 <div style="align: left; text-align:center;">
     <img src="/assets/img/acc.JPG" width="80%" height="auto"  id="figure7" />
