--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -199,7 +199,7 @@ We trained our model for 200 epochs. <a href="#figure7">Figure 7</a> shows the a
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/acc.JPG" width="80%" height="auto"  id="figure7" />
+    <img src="/assets/img/acc.jpg" width="80%" height="auto"  id="figure7" />
     <div class="caption" >Figure 7</div>
 </div>
 
