--- a/projects/Self-Projects/CycleGAN/index.html
+++ b/projects/Self-Projects/CycleGAN/index.html
@@ -217,29 +217,29 @@ We conducted two different experiments 1. We only used the cycle consistency los
 
 <p>
   We trained our model for 200 epochs. <a href="#figure7">Figure 7</a> shows the accuracy of the discriminator, where it shows the percentage of correct guesses for the discriminator for detecting real ground images of fake ground images.
-Our results and output were quite reasonable; however, we could not train the entire model to its full potential due to our limited resources. The results were not bad. The performance for generating ground images was better. <a href="#figure9">Figure 9</a> shows the result of our CycleGAN after 200 epochs of training without applying the identity loss.
+Our results and output were quite reasonable; however, we could not train the entire model to its full potential due to our limited resources. The results were not bad. The performance for generating ground images was better. <a href="#figure8">Figure 8</a> shows the result of our CycleGAN after 200 epochs of training without applying the identity loss.
 
 </p>
 
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/GroundGood1.PNG" width="75%" height="auto"  id="figure9" />
-    <div class="caption" >Figure 9</div>
+    <img src="/assets/img/GroundGood1.PNG" width="75%" height="auto"  id="figure8" />
+    <div class="caption" >Figure 8</div>
 </div>
 
 
 <h4>5.2 Cycle Consistency Loss + Identity Loss</h4>
 
 <p>
-  Since we had limited access to Google Colab servers, we used the weights from the previous model instead of just re-training our model (the model with no Identity loss). We fine-tuned the model with the new hyper-parameters. The only difference in the two hyper-parameters is that in the case we used the identity loss, parameter `\lambda_{I}` was not 0 and was the same value as `\lambda_(C)`. We trained our model for another 70 epochs, and <a href="#figure8">figure 8</a> shows the model's accuracy during training. This accuracy indicates the number of times the model has detected if the image was real or fake. Since we were fine-tuning the model, the first 200 epochs are the same as in figure <a href="#figure7">figure 7</a>. The final result from fine-tuning the model is in figures \ref{Ground2} and \ref{Seg2}. We can see the significant improvement in the ground image result in figure \ref{Ground2}. Meanwhile, the result for the segmentation model in figure \ref{Seg2} did not show much improvement.
+  Since we had limited access to Google Colab servers, we used the weights from the previous model instead of just re-training our model (the model with no Identity loss). We fine-tuned the model with the new hyper-parameters. The only difference in the two hyper-parameters is that in the case we used the identity loss, parameter `\lambda_{I}` was not 0 and was the same value as `\lambda_(C)`. We trained our model for another 70 epochs, and <a href="#figure8">figure 7</a>(left) shows the model's accuracy during training. This accuracy indicates the number of times the model has detected if the image was real or fake. Since we were fine-tuning the model, the first 200 epochs are the same as in figure <a href="#figure7">figure 7</a>(right). The final result from fine-tuning the model is in figures \ref{Ground2} and \ref{Seg2}. We can see the significant improvement in the ground image result in figure \ref{Ground2}. Meanwhile, the result for the segmentation model in figure \ref{Seg2} did not show much improvement.
 
 </p>
 
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/GroundGood.PNG" width="75%" height="auto"  id="figure10" />
-    <div class="caption" >Figure 10</div>
+    <img src="/assets/img/GroundGood.PNG" width="75%" height="auto"  id="figure9" />
+    <div class="caption" >Figure 9</div>
 </div>
 
 <h2 id="more-information">6. Conclusion</h2>
@@ -249,9 +249,16 @@ Our results and output were quite reasonable; however, we could not train the en
 </p>
 
 <div style="align: left; text-align:center;">
-    <img src="/assets/img/tosh.PNG" width="80%" height="auto"  id="figure9" />
-    <div class="caption" >Figure 9</div>
+    <img src="/assets/img/tosh.PNG" width="80%" height="auto"  id="figure10" />
+    <div class="caption" >Figure 10</div>
 </div>
+
+
+<div style="align: left; text-align:center;">
+    <img src="/assets/img/Final.PNG" width="80%" height="auto"  id="figure11" />
+    <div class="caption" >Figure 11</div>
+</div>
+
 
 <h2 id="more-information">More infomation</h2>
 
